--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-html{
+*{
     margin: 0;
 }
 
@@ -7,24 +7,42 @@ html{
     width: 100%;
 }
 
-.header{
-    padding: 10px;
-    align-items: stretch;
-    font-size: 1.5rem;
-    font-family: 'Lobster', cursive;
-    border-bottom: 1px solid rgb(145, 141, 141);
-}
-.header h4{
-    margin: 0 0 0 30%;
-    cursor: pointer;
+.marginAuto{
+    width: 60%;
+    margin: 50px auto;
 }
 
+.trackRecord{
+    margin: 50px auto;
+    background-color: rgb(219, 214, 214);
+    width: 100%;
+    height: 40vh;
+}
 
+.trackRecord{
+    display: flex;
+    justify-content: center;
+}
+.trackContent{
+    width: 70%;
+    padding: 50px;
+}
+
+.trackContent h3{
+    margin: 20px;
+}
+
+.trackContent p{
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 1px;
+}
 @media only screen and (max-width : 600px) {
     
     .App{
         width: 100%;
     }
+
 
     .header h4{
         margin: 0;
